Fixed contrast error.

--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,7 @@ hr {
 }
 
 .notice {
-	color: red;
+	color: #d61515;
 	margin: 1rem 0;
 }
 
